test/integration/bad/reserved/sum_to_zero_vector.stan
data {
  real sum_to_zero_vector;
}
